--- a/KnowledgeBase.API/appsettings.json
+++ b/KnowledgeBase.API/appsettings.json
@@ -10,9 +10,9 @@
     "services": [
       {
         "name": "articles-service",
-        "host": "localhost",
-        "scheme": "https",
-        "port": "5006"
+        "host": "knowledgebase_services_articles",
+        "scheme": "http",
+        "port": "80"
       }
     ]
   },
@@ -25,7 +25,7 @@
     "virtualHost": "/",
     "port": 5672,
     "hostnames": [
-      "192.168.1.189"
+      "rabbit"
     ],
     "requestTimeout": "00:00:10",
     "publishConfirmTimeout": "00:00:01",
