--- a/KnowledgeBase.Services.Articles/appsettings.json
+++ b/KnowledgeBase.Services.Articles/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=127.0.0.1;Port=3306;Database=knowledge_base;SslMode=none;"
+    "Default": "Server=mysql;Port=3306;Database=knowledge_base;Uid=root;Pwd=dbGrozy;SslMode=none"
   },
   "Logging": {
     "LogLevel": {
@@ -21,7 +21,7 @@
     "virtualHost": "/",
     "port": 5672,
     "hostnames": [
-      "192.168.1.189"
+      "rabbit"
     ],
     "requestTimeout": "00:00:10",
     "publishConfirmTimeout": "00:00:01",
